--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       -  "8888:8888"
     volumes:
-      -  ./nb:usr/src/workspace/nb
+      -  ./nb:usr/src/workspace/
     working_dir:
-      -  usr/src/workspace/nb/
+      -  /usr/src/workspace/
     entrypoint: ["jupyter","notebook","--ip='*'","--port=8888", "--no-browser", "--allow-root"]
