--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,11 @@
-version: 3.9
+version: "3.9"
 
 services:
   nb:
     build: .
     ports:
-      -  "8888:8888"
+      - "8888:8888"
     volumes:
-      -  ./nb:usr/src/workspace/
-    working_dir:
-      -  /usr/src/workspace/
+      - ./workspace:/usr/src/workspace
+    working_dir: /usr/src/workspace/
     entrypoint: ["jupyter","notebook","--ip='*'","--port=8888", "--no-browser", "--allow-root"]
